--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -16,7 +16,8 @@
   -->
 
 <resources>
-    <color name="launcher_background_color">@*android:color/accent_device_default</color>
+    <color name="launcher_background_color">@*android:color/accent_device_default_light</color>
 
-    <color name="search_panel_background">#f2f2f2</color>
+    <color name="search_bar_background">@*android:color/white</color>
+    <color name="search_panel_background">@*android:color/notification_material_background_color</color>
 </resources>
