--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -16,7 +16,7 @@
   -->
 
 <resources>
-    <color name="launcher_background_color">#ff008577</color>
+    <color name="launcher_background_color">@*android:color/accent_device_default</color>
 
     <color name="search_panel_background">#f2f2f2</color>
 </resources>
