--- a/res/values-night/colors.xml
+++ b/res/values-night/colors.xml
@@ -19,4 +19,5 @@
     <color name="search_bar_background">#202124</color>
     <color name="search_panel_background">@*android:color/notification_material_background_color</color>
 
+    <color name="oos_bg_of_card">@*android:color/material_grey_800</color>
 </resources>
